--- a/book.toml
+++ b/book.toml
@@ -8,7 +8,7 @@ src = "src"
 build-dir = "book"
 
 [output.html]
-additional-css = ["theme/epic-lab.css", "./mdbook-admonish.css"]
+additional-css = ["./mdbook-admonish.css"]
 default-theme = "light"
 preferred-dark-theme = "navy"
 git-repository-url = "https://github.com/go-bayes/26-434"
