--- a/book.toml
+++ b/book.toml
@@ -9,7 +9,7 @@ build-dir = "book"
 
 [output.html]
 additional-css = ["./mdbook-admonish.css"]
-default-theme = "light"
+default-theme = "rust"
 preferred-dark-theme = "navy"
 git-repository-url = "https://github.com/go-bayes/26-434"
 
