--- a/book.toml
+++ b/book.toml
@@ -8,8 +8,8 @@ src = "src"
 build-dir = "book"
 
 [output.html]
-additional-css = ["./mdbook-admonish.css"]
-default-theme = "light"
+additional-css = ["./mdbook-admonish.css", "./theme/epic-lab.css"]
+default-theme = "navy"
 preferred-dark-theme = "navy"
 git-repository-url = "https://github.com/go-bayes/26-434"
 
